--- a/query/deployment.yaml
+++ b/query/deployment.yaml
@@ -32,8 +32,8 @@ spec:
              value: "{{ global.domain }}"
            - name: HAIL_DEPLOY_CONFIG_FILE
              value: /deploy-config/deploy-config.json
-           - name: HAIL_BATCH_PODS_NAMESPACE
-             value: "{{ batch_pods_ns.name }}"
+           - name: HAIL_DEFAULT_NAMESPACE
+             value: "{{ default_ns.name }}"
            - name: HAIL_SHA
              value: "{{ code.sha }}"
            - name: HAIL_QUERY_WORKER_IMAGE
