--- a/build.yaml
+++ b/build.yaml
@@ -130,11 +130,11 @@ steps:
      - from: /io/repo/atgu/sql
        to: /repo/atgu/
      - from: /io/repo/hail/python/hailtop
-       to: /repo/hailtop/
+       to: /repo/
      - from: /io/repo/hail/python/test
-       to: /repo/test/
-     - from: /io/repo/hail/python/cluster-tests/
-       to: /repo/hail/python/cluster-tests
+       to: /repo/
+     - from: /io/repo/hail/python/cluster-tests
+       to: /repo/hail/python/
      - from: /io/repo/hail/python/hail/hail_version
        to: /hail_version
      - from: /io/repo/hail/python/hail/hail_pip_version
@@ -142,7 +142,7 @@ steps:
      - from: /io/repo/git_version
        to: /git_version
      - from: /io/repo/address/test
-       to: /repo/address/test
+       to: /repo/address/
    dependsOn:
      - base_image
  - kind: buildImage
