--- a/letsencrypt/Makefile
+++ b/letsencrypt/Makefile
@@ -8,6 +8,7 @@ LETSENCRYPT_IMAGE = gcr.io/$(PROJECT)/letsencrypt:$(shell docker images -q --no-
 build:
 	docker build -f Dockerfile -t letsencrypt --cache-from letsencrypt,$(LETSENCRYPT_LATEST) .
 
+.PHONY: push
 push: build
 	docker tag letsencrypt $(LETSENCRYPT_LATEST)
 	docker push $(LETSENCRYPT_LATEST)
@@ -23,5 +24,6 @@ run: push
 	python3 ../ci/jinja2_render.py '{"letsencrypt_image":{"image":"$(LETSENCRYPT_IMAGE)"},"domain":"$(DOMAIN)","domains":"'$$(paste -s -d, domains.txt.out)'","dry_run":$(DRY_RUN)}' letsencrypt-pod.yaml letsencrypt-pod.yaml.out
 	/bin/bash run-letsencrypt.sh
 
+.PHONY: clean
 clean:
 	rm -rf $(STATIC_CONFIG)
