--- a/letsencrypt/service.yaml
+++ b/letsencrypt/service.yaml
@@ -1,4 +1,36 @@
 apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: letsencrypt
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: letsencrypt-config
+---
+kind: Role
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: update-letsencrypt-config
+rules:
+- apiGroups: [""]
+  resources: ["secrets"]
+  resourceNames: ["letsencrypt-config"]
+  verbs: ["get", "update", "patch"]
+---
+kind: RoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: letsencrypt-update-letsencrypt-config
+subjects:
+- kind: ServiceAccount
+  name: letsencrypt
+roleRef:
+  kind: Role
+  name: update-letsencrypt-config
+  apiGroup: ""
+---
+apiVersion: v1
 kind: Service
 metadata:
   name: letsencrypt
