--- a/letsencrypt/Makefile
+++ b/letsencrypt/Makefile
@@ -5,8 +5,6 @@ LETSENCRYPT_IMAGE = gcr.io/$(PROJECT)/letsencrypt:$(shell docker images -q --no-
 
 STATIC_CONFIG = letsencrypt-pod.yaml letsencrypt.sh
 
-.PHONY: $(STATIC_CONFIG) build push start-service run clean
-
 $(STATIC_CONFIG): %: %.in
 	sed -e "s,@project@,$(PROJECT),g" \
 	  -e "s;@domains@;$(shell paste -s -d, domains.txt);g" \
@@ -14,23 +12,25 @@ $(STATIC_CONFIG): %: %.in
 	  -e "s,@ip@,$(IP),g" \
 	  < $< > $@
 
+.PHONY: build
 build: letsencrypt.sh
 	$(MAKE) -C ../docker hail-ubuntu
 	python3 ../ci/jinja2_render.py '{"hail_ubuntu_image":{"image":"hail-ubuntu"}}' Dockerfile Dockerfile.out
 	docker build -f Dockerfile.out -t letsencrypt --cache-from letsencrypt,$(LETSENCRYPT_LATEST),hail-ubuntu .
 
+.PHONY: push
 push: build
 	docker tag letsencrypt $(LETSENCRYPT_LATEST)
 	docker push $(LETSENCRYPT_LATEST)
 	docker tag letsencrypt $(LETSENCRYPT_IMAGE)
 	docker push $(LETSENCRYPT_IMAGE)
 
-start-service: service.yaml
-	kubectl -n default apply -f service.yaml
-
+.PHONY: run
 run: letsencrypt-pod.yaml service.yaml push
+	kubectl -n default apply -f service.yaml
 	python3 ../ci/jinja2_render.py '{"letsencrypt_image":{"image":"$(LETSENCRYPT_IMAGE)"}}' letsencrypt-pod.yaml letsencrypt-pod.yaml.out
 	/bin/bash run-letsencrypt.sh
 
+.PHONY: clean
 clean:
 	rm -rf $(STATIC_CONFIG)
