--- a/letsencrypt/Dockerfile
+++ b/letsencrypt/Dockerfile
@@ -1,10 +1,13 @@
 FROM {{ hail_ubuntu_image.image }}
 
-# get add-apt-repository
-RUN hail-apt-get-install nginx software-properties-common && \
-    bash -c 'DEBIAN_FRONTEND=noninteractive apt-get install -y tzdata' && \
-    add-apt-repository -y ppa:certbot/certbot && \
-    hail-apt-get-install python-certbot-nginx wget
+RUN apt update && \
+    apt install -y nginx software-properties-common && \
+    bash -c 'DEBIAN_FRONTEND=noninteractive apt install -y tzdata' && \
+    python3.6 /usr/bin/add-apt-repository -y ppa:certbot/certbot && \
+    apt install -y python-certbot-nginx wget && \
+    rm -rf /var/lib/apt/lists/*
+
+RUN hail-pip-install cffi
 
 RUN wget -O /usr/local/bin/kubectl https://storage.googleapis.com/kubernetes-release/release/v1.11.3/bin/linux/amd64/kubectl && \
     chmod +x /usr/local/bin/kubectl
