--- a/build.yaml
+++ b/build.yaml
@@ -370,7 +370,10 @@ steps:
      valueFrom: auth_image.image
    script: |
      set -ex
+     export PROJECT={{ global.project }}
+     export ZONE={{ global.zone }}
      export HAIL_PROJECT={{ global.project }}
+     export HAIL_DEFAULT_NAMESPACE={{ default_ns.name }}
      {% if not deploy %}
      export HAIL_NAMESPACE_NAME={{ default_ns.name }}
      export HAIL_GSA_EMAIL=$(kubectl get secret test-gsa-key -o jsonpath={.data.key\\.json} | base64 -d | jq -r '."client_email"')
