--- a/build.yaml
+++ b/build.yaml
@@ -376,11 +376,8 @@ steps:
      export ZONE={{ global.zone }}
      export HAIL_PROJECT={{ global.project }}
      export HAIL_DEFAULT_NAMESPACE={{ default_ns.name }}
-     {% if not deploy %}
-     export HAIL_NAMESPACE_NAME={{ default_ns.name }}
-     export HAIL_GSA_EMAIL=$(kubectl get secret test-gsa-key -o jsonpath={.data.key\\.json} | base64 -d | jq -r '."client_email"')
-     {% endif %}
-     python3 /io/bootstrap_create_accounts.py 
+     export HAIL_SCOPE={{ scope }}
+     python3 /io/bootstrap_create_accounts.py
    serviceAccount:
      name: admin
      namespace:
