--- a/site/hail.nginx.conf.in
+++ b/site/hail.nginx.conf.in
@@ -48,6 +48,30 @@ server {
     location @prefix@/ {
         rewrite  ^@prefix@(/.*) $1 break;
         index index.html;
-        root /var/www/html;
+        root /var/www/html/site;
+    }
+}
+
+server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    server_name docs;
+
+    include /etc/nginx/conf.d/rewrite-links-for-namespace.conf;
+
+    location = /health {
+        return 200;
+    }
+
+    error_page 404 /404.html;
+
+    location = @prefix@/ {
+        return 301 $updated_scheme://$updated_host@prefix@/index.html;
+    }
+
+    location @prefix@/ {
+        rewrite  ^@prefix@(/.*) $1 break;
+        index index.html;
+        root /var/www/html/docs;
     }
 }
