--- a/benchmark-service/deployment.yaml
+++ b/benchmark-service/deployment.yaml
@@ -24,6 +24,13 @@ spec:
          value: "true"
       containers:
         - name: benchmark
+          command:
+{% if not deploy %}
+           - /controller.sh
+           - "python3"
+           - "-m"
+           -"benchmark"
+{% endif %}
           image: "{{ benchmark_image.image }}"
           env:
           - name: HAIL_DOMAIN
