--- a/ci/deployment.yaml
+++ b/ci/deployment.yaml
@@ -23,6 +23,13 @@ spec:
         preemptible: "false"
       containers:
         - name: ci
+          command:
+{% if not deploy %}
+           - /controller.sh
+           - "python3"
+           - "-m"
+           - "ci"
+{% endif %}
           image: "{{ ci_image.image }}"
           resources:
             requests:
