--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -6,12 +6,17 @@ RUN hail-apt-get-install \
     unzip bzip2 zip tar \
     wget curl \
     rsync \
-    emacs25-nox \
+    emacs-nox \
     mysql-client \
     xsltproc pandoc \
     jq \
     openjdk-8-jdk-headless \
-    liblapack3
+    liblapack3 \
+    g++-10 \
+    gcc-10
+
+RUN update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-10 10 && \
+    update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-10 10
 
 # source: https://cloud.google.com/storage/docs/gsutil_install#linux
 RUN /bin/sh -c 'curl https://sdk.cloud.google.com | bash' && \
