[ci] use global config in ci test deployment

--- a/ci/test/resources/deployment.yaml
+++ b/ci/test/resources/deployment.yaml
@@ -49,12 +49,18 @@ spec:
              readOnly: true
           env:
            - name: HAIL_IP
-             value: "{{ global.ip }}"
+             valueFrom:
+               secretKeyRef:
+                 name: global-config
+                 key: ip
            - name: HAIL_DOMAIN
-             value: "{{ global.domain }}"
+             valueFrom:
+               secretKeyRef:
+                 name: global-config
+                 key: domain
            - name: HAIL_DEPLOY_CONFIG_FILE
              value: /deploy-config/deploy-config.json
-           - name: SHA
+           - name: HAIL_SHA
              value: "{{ code.sha }}"
       volumes:
        - name: deploy-config
