--- a/batch/deployment.yaml
+++ b/batch/deployment.yaml
@@ -53,12 +53,12 @@ spec:
            value: "{{ default_ns.name }}"
          - name: PROJECT
            value: "{{ global.project }}"
-         - name: HAIL_GPC_REGION
+         - name: HAIL_GCP_REGION
            valueFrom:
              secretKeyRef:
                name: global-config
                key: gpc_region
-         - name: HAIL_BATCH_GPC_REGIONS
+         - name: HAIL_BATCH_GCP_REGIONS
            valueFrom:
              secretKeyRef:
                name: global-config
